[package]
name = "renext-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "renext_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", tag = "v0.20.1", version = "0.20.1", package = "anchor-lang"}
anchor-spl = { git = "https://github.com/coral-xyz/anchor", tag = "v0.20.1", version = "0.20.1", package = "anchor-spl"}
thiserror = "1.0"
solana-program = "*"
